--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,8 +35,8 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Drive_Mate_Instructor
 endorsed.classpath=
 excludes=
-file.reference.flatlaf-3.4.1.jar=C:\\Users\\smbha\\OneDrive\\Documents\\NetBeansProjects\\PROJECT\\flatlaf-3.4.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\smbha\\OneDrive\\Documents\\NetBeansProjects\\PROJECT\\mysql-connector-java-5.1.23-bin.jar
+file.reference.flatlaf-3.4.1.jar=lib\\flatlaf-3.4.1.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar-1=/Users/imalka/Downloads/untitled folder 5/PROJECT/mysql-connector-java-5.1.23-bin.jar
 includes=**
 jar.compress=false
